--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
             
-                <div class="banner__input-wrapper" id="input-search">
+                <div class="banner__input-wrapper input-search">
                     <input type="text" placeholder="Find Now" class="banner__input">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
