--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="banner__texts">
                 <h1>Explore Your Travel</h1>
 
-                <p>Unlock a world of unforgettable experiences with our curated travel guides, exclusive deals, and expert recommendations.</p>
+                <p>Unleash your inner explorer and embark on a journey like no other. Whether it’s discovering hidden gems, strolling through vibrant city streets.</p>
             </div>
 
             <div class="banner__inputs content-center">
@@ -65,9 +65,9 @@
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
             
-                <div class="banner__input-wrapper input-search">
-                    <input type="text" placeholder="Find Now" class="banner__input">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                <div class="banner__input-wrapper last-input">
+                        <i class="fa-solid fa-magnifying-glass search-icon"></i>
+                        <input type="text" placeholder="Find Now" class="banner__input search-placeholder">
                 </div>
 
             </div>
@@ -106,6 +106,10 @@
                 </div>
              </section>
             <!-- Popular tours section ends here  -->
+
+            <!-- choose your destination starts here  -->
+             
+            <!-- choose your destination ends here  -->
         </main>
 
         <!-- Footer Section -->
