feat: add choose destination section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,24 @@
             <!-- Popular tours section ends here  -->
 
             <!-- choose your destination starts here  -->
-             
+             <section class="choose-destination-section">
+                <div class="choose-destination-wrapper">
+                    <div class="choose-destination__texts content-center">
+                        <h2>Choose Your Destination</h2>
+                        <p>From sun-kissed beaches to snow-capped mountains, the world is yours to explore. Whether you crave adventure, relaxation. </p>
+                    </div>
+
+                    <div class="choose-destination__images">
+                        <div class="choose-destination__img-1 grid-img">Maldives</div>
+                        <div class="choose-destination__img-2 grid-img">Indonesia</div>
+                        <div class="choose-destination__img-3 grid-img">Srilanka</div>
+                        <div class="choose-destination__img-4 grid-img">North America </div>
+                        <div class="choose-destination__img-5 grid-img">Kashmir</div>
+                        <div class="choose-destination__img-6 grid-img">Bangladesh</div>
+                        <div class="choose-destination__img-7 grid-img">Bandarban</div>
+                    </div>
+                </div>
+             </section>
             <!-- choose your destination ends here  -->
         </main>
 
