feat: add why to choose us cards section without responsiveness

--- a/index.html
+++ b/index.html
@@ -127,11 +127,50 @@
                 </div>
              </section>
             <!-- choose your destination ends here  -->
+
+            <!-- why to choose us section starts here  -->
+             <section id="choose-us">
+                <div class="choose-us__wrapper">
+                    <div class="choose-us__texts content-center">
+                        <h2>Why To Choose Us</h2>
+                        <p>Experience hassle-free travel with personalized packages crafted just for you. Trusted by thousands of travelers, we ensure unforgettable.</p>
+                    </div>
+
+                    <div class="choose-us__cards-wrapper">
+
+                        <div class="choose-us__card card-1">
+                            <div class="card-contents-wrapper">
+                            <img src="Images/icons/hotel-sign.png" alt="">
+                            <h3>Hand Picked Hotels</h3>
+                            <p>Our handpicked hotels are thoughtfully chosen to provide you with the perfect blend of comfort, luxury, and convenience. Whether you're seeking a cozy boutique </p>
+                            </div>
+                        </div>
+
+                        <div class="choose-us__card card-2">
+                            <div class="card-contents-wrapper">
+                            <img src="Images/icons/map-sign.png" alt="">
+                            <h3>World Class Service</h3>
+                            <p>Our handpicked hotels are thoughtfully chosen to provide you with the perfect blend of comfort, luxury, and convenience. Whether you're seeking a cozy boutique </p>
+                            </div>
+                        </div>
+
+                        <div class="choose-us__card card-3">
+                            <div class="card-contents-wrapper">
+                            <img src="Images/icons/best-deal.png" alt="">
+                            <h3>Best Price Guaranty</h3>
+                            <p>Our handpicked hotels are thoughtfully chosen to provide you with the perfect blend of comfort, luxury, and convenience. Whether you're seeking a cozy boutique </p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+             </section>
+            <!-- why to choose us section ends here  -->
         </main>
 
         <!-- Footer Section -->
         <footer>
-          
+            
         </footer>
     </div>
 </body>
