unfinished deals and discount section

--- a/index.html
+++ b/index.html
@@ -165,12 +165,46 @@
                     </div>
                 </div>
              </section>
-            <!-- why to choose us section ends here  -->
+            <!-- why choose us section ends here  -->
+
+            <section id="deals-discount">
+                <div class="deals-discount-wrapper">
+                    <div class="deals-discount__texts content-center">
+                        <h2>Deals & Discount</h2>
+                        <p>Unlock the best travel experiences without breaking the bank! Explore our exclusive deals and discounts on flights, hotels, and holiday packages, designed to bring you incredible value. </p>
+                    </div>
+
+                    <div class="deals-discount-card-wrapper">
+                        <div class="card-top-icons content-center">
+
+                           <div class="card-top-icon content-center">
+                            <div><i class="fa-solid fa-clock"></i></div>
+                            <div><p>7 Day / 6 Night</p></div>
+                           </div>
+
+                           <div class="card-top-icon content-center">
+                            <div><i class="fa-solid fa-users"></i></div>
+                            <div><p>Max : 10</p></div>
+                           </div>
+
+                           <div class="card-top-icon content-center">
+                            <div><i class="fa-solid fa-location-dot"></i></div>
+                            <div> <p>Malaysia</p></div>
+                           </div>
+
+                        </div>
+                        <h3>Tour To Satorini</h3>
+                        <p>Escape to the enchanting island of Santorini, where breathtaking sunsets meet pristine white-washed architecture. Nestled in the heart of the Aegean Sea.</p>
+                        <h4>Price : 1300-1500$</h4>
+                        <button class="btn-primary">Book Now</button>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!-- Footer Section -->
         <footer>
-            
+
         </footer>
     </div>
 </body>
