fix: variable color. primary-text-color and secondary-text-color. add common color for all p. explicitly add var: highlight-color for title p.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <section class="banner-container content-center">
 
             <div class="banner__texts">
-                <h1>Explore Your Travel</h1>
+                <h1 id="banner-header">Explore Your Travel</h1>
 
-                <p>Unleash your inner explorer and embark on a journey like no other. Whether it’s discovering hidden gems, strolling through vibrant city streets.</p>
+                <p id="banner-paragraph">Unleash your inner explorer and embark on a journey like no other. Whether it’s discovering hidden gems, strolling through vibrant city streets.</p>
             </div>
 
             <div class="banner__inputs content-center">
@@ -178,17 +178,17 @@
                         <div class="card-top-icons content-center">
 
                            <div class="card-top-icon content-center">
-                            <div><i class="fa-solid fa-clock"></i></div>
+                            <div><i class="fa-solid fa-clock fw-icon"></i></div>
                             <div><p>7 Day / 6 Night</p></div>
                            </div>
 
                            <div class="card-top-icon content-center">
-                            <div><i class="fa-solid fa-users"></i></div>
+                            <div><i class="fa-solid fa-users fw-icon"></i></div>
                             <div><p>Max : 10</p></div>
                            </div>
 
                            <div class="card-top-icon content-center">
-                            <div><i class="fa-solid fa-location-dot"></i></div>
+                            <div><i class="fa-solid fa-location-dot fw-icon"></i></div>
                             <div> <p>Malaysia</p></div>
                            </div>
 
