--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
              </section>
             <!-- why choose us section ends here  -->
 
+            <!-- Deals and discount section starts here  -->
+
             <section id="deals-discount">
                 <div class="deals-discount-wrapper">
                     <div class="deals-discount__texts content-center">
@@ -174,6 +176,7 @@
                         <p>Unlock the best travel experiences without breaking the bank! Explore our exclusive deals and discounts on flights, hotels, and holiday packages, designed to bring you incredible value. </p>
                     </div>
 
+                   <div class="deals-discount-background-wrapper wrapper-1">
                     <div class="deals-discount-card-wrapper">
                         <div class="card-top-icons content-center">
 
@@ -189,7 +192,33 @@
 
                            <div class="card-top-icon content-center">
                             <div><i class="fa-solid fa-location-dot fw-icon"></i></div>
-                            <div> <p>Malaysia</p></div>
+                            <div><p>Malaysia</p></div>
+                           </div>
+
+                        </div>
+                        <h3>Tour To Satorini</h3>
+                        <p>Escape to the enchanting island of Santorini, where breathtaking sunsets meet pristine white-washed architecture. Nestled in the heart of the Aegean Sea.</p>
+                        <h4>Price : 1300-1500$</h4>
+                        <div class=""><button class="btn-primary">Book Now</button></div>
+                    </div>
+                   </div>
+                   <div class="deals-discount-background-wrapper wrapper-2">
+                    <div class="deals-discount-card-wrapper">
+                        <div class="card-top-icons content-center">
+
+                           <div class="card-top-icon content-center">
+                            <div><i class="fa-solid fa-clock fw-icon"></i></div>
+                            <div><p>7 Day / 6 Night</p></div>
+                           </div>
+
+                           <div class="card-top-icon content-center">
+                            <div><i class="fa-solid fa-users fw-icon"></i></div>
+                            <div><p>Max : 10</p></div>
+                           </div>
+
+                           <div class="card-top-icon content-center">
+                            <div><i class="fa-solid fa-location-dot fw-icon"></i></div>
+                            <div><p>Malaysia</p></div>
                            </div>
 
                         </div>
@@ -198,6 +227,38 @@
                         <h4>Price : 1300-1500$</h4>
                         <button class="btn-primary">Book Now</button>
                     </div>
+                   </div>
+                   <div class="deals-discount-background-wrapper wrapper-3">
+                    <div class="deals-discount-card-wrapper">
+                        <div class="card-top-icons content-center">
+
+                           <div class="card-top-icon content-center">
+                            <div><i class="fa-solid fa-clock fw-icon"></i></div>
+                            <div><p>7 Day / 6 Night</p></div>
+                           </div>
+
+                           <div class="card-top-icon content-center">
+                            <div><i class="fa-solid fa-users fw-icon"></i></div>
+                            <div><p>Max : 10</p></div>
+                           </div>
+
+                           <div class="card-top-icon content-center">
+                            <div><i class="fa-solid fa-location-dot fw-icon"></i></div>
+                            <div><p>Malaysia</p></div>
+                           </div>
+
+                        </div>
+                        <h3>Tour To Satorini</h3>
+                        <p>Escape to the enchanting island of Santorini, where breathtaking sunsets meet pristine white-washed architecture. Nestled in the heart of the Aegean Sea.</p>
+                        <h4>Price : 1300-1500$</h4>
+                        <button class="btn-primary">Book Now</button>
+                    </div>
+                   </div>
+
+                </div>
+
+                <div class="btn-packagess">
+                    <button class="btn-primary packages-btn">See All Packages</button>
                 </div>
             </section>
         </main>
