fix: responsiveness deals and discount section

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="deals-discount-wrapper">
                     <div class="deals-discount__texts content-center">
                         <h2>Deals & Discount</h2>
-                        <p>Unlock the best travel experiences without breaking the bank! Explore our exclusive deals and discounts on flights, hotels, and holiday packages, designed to bring you incredible value. </p>
+                        <p>Unlock the best travel experiences without breaking the bank! Explore our exclusive deals and discounts on flights. </p>
                     </div>
 
                    <div class="deals-discount-background-wrapper wrapper-1">
@@ -199,7 +199,7 @@
                         <h3>Tour To Satorini</h3>
                         <p>Escape to the enchanting island of Santorini, where breathtaking sunsets meet pristine white-washed architecture. Nestled in the heart of the Aegean Sea.</p>
                         <h4>Price : 1300-1500$</h4>
-                        <div class=""><button class="btn-primary">Book Now</button></div>
+                        <div class=""><button class="btn-primary book-now">Book Now</button></div>
                     </div>
                    </div>
                    <div class="deals-discount-background-wrapper wrapper-2">
@@ -225,7 +225,7 @@
                         <h3>Tour To Satorini</h3>
                         <p>Escape to the enchanting island of Santorini, where breathtaking sunsets meet pristine white-washed architecture. Nestled in the heart of the Aegean Sea.</p>
                         <h4>Price : 1300-1500$</h4>
-                        <button class="btn-primary">Book Now</button>
+                        <button class="btn-primary book-now">Book Now</button>
                     </div>
                    </div>
                    <div class="deals-discount-background-wrapper wrapper-3">
@@ -251,7 +251,7 @@
                         <h3>Tour To Satorini</h3>
                         <p>Escape to the enchanting island of Santorini, where breathtaking sunsets meet pristine white-washed architecture. Nestled in the heart of the Aegean Sea.</p>
                         <h4>Price : 1300-1500$</h4>
-                        <button class="btn-primary">Book Now</button>
+                        <button class="btn-primary book-now">Book Now</button>
                     </div>
                    </div>
 
